--- a/.gitignore
+++ b/.gitignore
@@ -5,18 +5,12 @@
 # Java class files
 *.class
 
-# generated files
+# Generated files
 bin/
 gen/
 
 # Local configuration file (sdk path, etc)
 local.properties
-
-# Windows thumbnail db
-Thumbs.db
-
-# OSX files
-.DS_Store
 
 # Android Studio
 *.iml
@@ -24,5 +18,5 @@ Thumbs.db
 .gradle
 build/
 
-*ASUS_PC_01*
-
+# Sensitive info
+key.java
